--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+astroid==2.0.4
 Click==7.0
 Flask==1.0.2
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
+paho-mqtt==1.4.0
+typed-ast==1.1.0
 Werkzeug==0.14.1
+wrapt==1.10.11
